<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarThumbVertical="@android:color/transparent">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/banner"
            android:contentDescription="@string/jumbotron"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lorabold"
                android:text="@string/premium_collections"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/loraregular"
                android:text="@string/designed_by_famous_disigner"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/lorabold"
        android:text="@string/clothes"
        android:textColor="#000000"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBaju"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/labelDesigner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/lorabold"
        android:text="@string/our_designer"
        android:textColor="#000000"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDesigner"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        app:layout_constraintTop_toBottomOf="@id/labelDesigner"
        android:background="#3D3D3D"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_8dp"/>


</LinearLayout>
</ScrollView>