<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_clothe"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@drawable/produk4"
                android:contentDescription="@string/foto_produk"/>

            <TextView
                android:id="@+id/tv_name_clothe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black_zombie"
                android:textColor="#000000"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserratmedium"/>

            <TextView
                android:id="@+id/tv_harga_clhote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/harga_example"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_10sp"
                android:fontFamily="@font/loraregular"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>